:construction: Improve live sync